--- a/index.html
+++ b/index.html
@@ -680,14 +680,14 @@
                                     </ul>
                                 </div>
                                 <div class="wrap-social">
-                                    <div class="text-title font2 text-color-1 mb_12">Social</div>
+                                    <!-- <div class="text-title font2 text-color-1 mb_12">Social</div>
                                     <ul class="tf-social">
                                         <li><a href="#" class="icon-Dribbble"></a></li>
                                         <li><a href="#" class="icon-Behance"></a></li>
                                         <li><a href="#" class="icon-Instagram"></a></li>
                                         <li><a href="#" class="icon-FaceBook"></a></li>
                                         <li><a href="#" class="icon-X"></a></li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
                         </div>
