--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <span class="point"></span>
                         <p class="text-body-2 text_white">Open to opportunities</p>
                     </div>
-                    <a href="#" class="link-no-action side-toggle  link-no-action">
+                    <a href="#-" class="link-no-action side-toggle  link-no-action">
                         <div class="icon">
                             <span class="top"></span>
                             <span class="middle"></span>
