--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="image">
                         <div class="row">
                             <div class="col-md-6 mx-auto tf-animate-1">
-                                <img loading="lazy" width="695" height="854" src="images/hero/hero-4.jpg" alt="Image">
+                                <img loading="lazy" width="695" height="854" src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=695&h=854&fit=crop&q=80" alt="QA Engineer Workspace">
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                             <div class="box-about">
                                 <div class="thumbs scale-img">
                                     <img loading="lazy" decoding="async" width="325" height="436"
-                                        src="images/section/about-2.jpg" alt="about">
+                                        src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=325&h=436&fit=crop&q=80" alt="QA Professional Workspace">
                                 </div>
                                 <div class="content">
                                     <p class="font2 desc">I specialize in conducting thorough manual testing across web and mobile platforms, validating REST APIs using tools like Postman, and creating detailed test documentation. My approach combines structured test case matrices with collaborative Agile workflows to maintain traceability and quality benchmarks throughout the SDLC.</p>
@@ -309,8 +309,8 @@
                             <div class="box-right">
                                 <div class="number">01</div>
                                 <div class="img-style scale-img">
-                                    <img loading="lazy" decoding="async" src="images/section/service-1.jpg" width="448"
-                                        height="490" alt="service">
+                                    <img loading="lazy" decoding="async" src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=448&h=490&fit=crop&q=80" width="448"
+                                        height="490" alt="Manual Testing & QA">
                                 </div>
                             </div>
                         </div>
@@ -336,8 +336,8 @@
                             <div class="box-right">
                                 <div class="number">02</div>
                                 <div class="img-style scale-img">
-                                    <img loading="lazy" decoding="async" src="images/section/service-2.jpg" width="448"
-                                        height="490" alt="service">
+                                    <img loading="lazy" decoding="async" src="https://images.unsplash.com/photo-1555949963-ff9fe0c870eb?w=448&h=490&fit=crop&q=80" width="448"
+                                        height="490" alt="API Testing & Validation">
                                 </div>
                             </div>
                         </div>
@@ -363,8 +363,8 @@
                             <div class="box-right">
                                 <div class="number">03</div>
                                 <div class="img-style scale-img">
-                                    <img loading="lazy" decoding="async" src="images/section/service-3.jpg" width="448"
-                                        height="490" alt="service">
+                                    <img loading="lazy" decoding="async" src="https://images.unsplash.com/photo-1531498860502-7c67cf02f657?w=448&h=490&fit=crop&q=80" width="448"
+                                        height="490" alt="Agile QA & Documentation">
                                 </div>
                             </div>
                         </div>
@@ -389,7 +389,7 @@
                     <div class="tf-grid-layout md-col-2 gap_16">
                         <div class="project-item">
                             <div class="img-style scale-img">
-                                <img src="images/section/project-1.jpg" width="896" height="820" alt="project">
+                                <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=896&h=820&fit=crop&q=80" width="896" height="820" alt="Eden PM Project Management Testing">
                             </div>
                             <div class="content">
                                 <a href="https://eden.pm/" class="h3 text_white mb_7 link">Eden PM - Product Management Platform</a>
@@ -408,7 +408,7 @@
                                 </ul>
                             </div>
                             <div class="img-style scale-img">
-                                <img src="images/section/project-2.jpg" width="896" height="820" alt="project">
+                                <img src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?w=896&h=820&fit=crop&q=80" width="896" height="820" alt="Eventlify Event Management Testing">
                             </div>
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                     <div class="wrap-portfolio">
                         <div class="portfolio-item style-2">
                             <a href="https://eden.pm/" class="img-style scale-img">
-                                <img src="images/portfolio/portfolio-9.jpg" width="696" height="688" alt="portfolio">
+                                <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=696&h=688&fit=crop&q=80" width="696" height="688" alt="Test Case Documentation">
                             </a>
                             <div class="content">
                                 <a href="https://eden.pm/" class="mb_16 title link">Eden PM - Product Management Testing</a>
@@ -513,7 +513,7 @@
                         </div>
                         <div class="portfolio-item style-2">
                             <a href="https://www.eventlify.com/" class="img-style scale-img">
-                                <img src="images/portfolio/portfolio-11.jpg" width="696" height="457" alt="portfolio">
+                                <img src="https://images.unsplash.com/photo-1557853197-aefb550b6fdc?w=696&h=457&fit=crop&q=80" width="696" height="457" alt="Event Platform Testing">
                             </a>
                             <div class="content">
                                 <a href="https://www.eventlify.com/" class="mb_16 title link">Eventlify - Event Platform QA</a>
@@ -527,7 +527,7 @@
                         </div>
                         <div class="portfolio-item style-2">
                             <a href="#" class="img-style scale-img">
-                                <img src="images/portfolio/portfolio-13.jpg" width="696" height="867" alt="portfolio">
+                                <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?w=696&h=867&fit=crop&q=80" width="696" height="867" alt="API Testing with Postman">
                             </a>
                             <div class="content">
                                 <a href="#" class="mb_16 title link">API Testing & Validation</a>
@@ -541,7 +541,7 @@
                         </div>
                         <div class="portfolio-item style-2">
                             <a href="#" class="img-style scale-img">
-                                <img src="images/portfolio/portfolio-10.jpg" width="696" height="867" alt="portfolio">
+                                <img src="https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?w=696&h=867&fit=crop&q=80" width="696" height="867" alt="Test Documentation">
                             </a>
                             <div class="content">
                                 <a href="#" class="mb_16 title link">Test Case Documentation</a>
@@ -555,7 +555,7 @@
                         </div>
                         <div class="portfolio-item style-2">
                             <a href="#" class="img-style scale-img">
-                                <img src="images/portfolio/portfolio-12.jpg" width="696" height="688" alt="portfolio">
+                                <img src="https://images.unsplash.com/photo-1553877522-43269d4ea984?w=696&h=688&fit=crop&q=80" width="696" height="688" alt="JIRA Bug Tracking">
                             </a>
                             <div class="content">
                                 <a href="#" class="mb_16 title link">JIRA Bug Tracking</a>
@@ -569,7 +569,7 @@
                         </div>
                         <div class="portfolio-item style-2">
                             <a href="#" class="img-style scale-img">
-                                <img src="images/portfolio/portfolio-14.jpg" width="696" height="457" alt="portfolio">
+                                <img src="https://images.unsplash.com/photo-1556656793-08538906a9f8?w=696&h=457&fit=crop&q=80" width="696" height="457" alt="Mobile & Cross-Browser Testing">
                             </a>
                             <div class="content">
                                 <a href="#" class="mb_16 title link">Cross-Browser & Mobile Testing</a>
@@ -591,34 +591,34 @@
                 <div class="wrap-infiniteslide">
                     <div class="infiniteslide " data-clone="2" data-style="left">
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-1.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/jira/0052CC" alt="JIRA" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-2.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/postman/FF6C37" alt="Postman" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-3.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/git/F05032" alt="Git" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-4.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/selenium/43B02A" alt="Selenium" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-5.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/confluence/172B4D" alt="Confluence" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-6.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/googlechrome/4285F4" alt="Chrome DevTools" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-7.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/visualstudiocode/007ACC" alt="VS Code" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-8.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/docker/2496ED" alt="Docker" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-9.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/jenkins/D24939" alt="Jenkins" style="width: 80px; height: 80px;">
                         </div>
                         <div class="marquee-item ">
-                            <img src="images/logo/partner-10.png" alt="partner">
+                            <img src="https://cdn.simpleicons.org/github/181717" alt="GitHub" style="width: 80px; height: 80px;">
                         </div>
                     </div>
                 </div>
@@ -638,7 +638,7 @@
                                 <h6 class="desc">" I deliver thorough quality assurance through comprehensive testing strategies, ensuring product reliability and exceptional user experiences across web and mobile platforms. "</h6>
                                 <div class="author d-flex align-items-center gap_16">
                                     <div class="avatar">
-                                        <img src="images/avatar/avatar-7.png" width="64" height="64" alt="avatar">
+                                        <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Ramsha" width="64" height="64" alt="Ramsha Mukhtar Avatar">
                                     </div>
                                     <div class="info">
                                         <h6 class="name text_white mb_2">Ramsha Mukhtar</h6>
